+ Experimental platform-independent DEB package (that relies on existing debian dependencies for all native code)